@@ -2,11 +2,17 @@ package com.edu.backend;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
+
+import javax.sql.DataSource;
+
+import com.edu.backend.dao.CentroDao;
+import com.edu.backend.dao.EstudianteDao;
 
 import edu.acceso.sqlutils.ConnectionPool;
 import edu.acceso.sqlutils.SqlUtils;
@@ -14,87 +20,73 @@ import edu.acceso.sqlutils.errors.DataAccessException;
 
 public class Conexion {
 
-    private static Conexion instance;
+    private static DataSource ds;
 
-    private ConnectionPool cp;
-    private static final  String sgbd = "jdbc:sqlite:";
+    private static final String sgbd = "jdbc:sqlite:";
     private static final String tabla = "Centro";
 
-    private Conexion(String path) {
-        String url = sgbd + path;
-        cp = ConnectionPool.getInstance(url);
+    @FunctionalInterface
+    public static interface DaoInterface {
+        public void run(CentroDao cdao, EstudianteDao edao);
     }
 
-    // Realiza la conexión a la base de datos si pasamos el path y el guión
-    public static Conexion create(String path) {
+    public static DataSource create(String path) throws IOException {
         try {
             return create(path, null);
-        } catch (IOException | DataAccessException e){
-            assert false: "No puede generarse errores si no se inicializa la base de datos.";
+        } catch(DataAccessException e) {
+            assert false: "No pueden generarse errores si no se inicializa la base de datos.";
             return null;
         }
     }
 
-    public static Conexion create(String path, String guion) throws IOException, DataAccessException{
-        if (instance != null) throw new IllegalStateException("La conexió ya se inicializó");
-        
-        instance = new Conexion(path);
-        if (guion != null) instance.inicializar(guion);
+    public static DataSource create(String path, String guion) throws IOException, DataAccessException {
+        if(ds != null) throw new IllegalStateException("La conexión ya se inicializó");
 
-        return instance;
+        ds = ConnectionPool.getInstance(sgbd + path);
+        if(guion != null) Conexion.inicializar(guion);
+
+        return ds;
     }
 
-    public static Conexion getInstance() {
-        if (instance == null) throw new IllegalStateException("Debe crearse la conexión primero");
-        return instance;
-    }
-
-
-    // Obtiene el archivo que queremos abrir (desde la carpeta resources)
-    private InputStream obtenerEntrada(String guion) throws IOException {
-        if (guion.startsWith("resources:")) {
+    private static InputStream obtenerEntrada(String guion) throws IOException {
+        if(guion.startsWith("resources:")) {
             guion = guion.substring("resources:".length());
-            return getClass().getResourceAsStream(guion);
+            return Conexion.class.getResourceAsStream(guion);
         }
         else {
-            try{
-                URL url = new URL(guion);
+            try {
+                URL url = new URI(guion).toURL();
                 return url.openStream();
-            } catch (MalformedURLException e) {
+            } catch(URISyntaxException e) {
                 throw new IllegalArgumentException("La URL del guión es inválida");
-            }
+            } 
         }
     }
 
-    // Inicializal al abase d edatos
-    private void inicializar(String guion) throws IOException, DataAccessException{
+    private static void inicializar(String guion) throws IOException, DataAccessException {
         try(
             InputStream st = obtenerEntrada(guion);
-            Connection conn = cp.getConnection();
+            Connection conn = ds.getConnection();
         ) {
-            try (Statement stmt = conn.createStatement()) {
-                stmt.executeQuery("SELECT 1 FROM Centro");
-            } catch (SQLException e) {
-                try{
+            try(Statement stmt = conn.createStatement()) {
+                stmt.executeQuery(String.format("SELECT 1 FROM %s", tabla));
+            } catch(SQLException e) {
+                try {
                     SqlUtils.executeSQL(conn, st);
-                } catch (SQLException ex) {
-                throw new DataAccessException("Error al iniciar la base de datos", ex);
+                } catch(SQLException ex) {
+                    throw new DataAccessException("Error al inicializar la base de datos", ex);
                 }
             }
         } catch(SQLException e) {
-            throw new DataAccessException("Imposible conectarse a la base de datos", e);
+            throw new DataAccessException("Imposible conectar a la base de datos", e);
         }
     }
 
-    public ConnectionPool getConnectionPool() {
-        return cp;
-    } 
-
-    public Connection getConnection() throws DataAccessException {
-        try {
-            return cp.getConnection();
-        } catch (SQLException e) {
-            throw new DataAccessException(e);
-        }
+    public static DataSource get() {
+        if(ds == null) throw new IllegalStateException("La conexión no se ha inicializado");
+        return ds;
     }
+
+
+    
 }
